# ethash-sys

./: .gitignore  Cargo.toml  build.rs
native/: wrapper.h
src/: lib.rs
